--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -40,6 +40,7 @@
         
         <!--Back To Top-->
         <div class="back-to-top"><i class="fa fa-angle-up"></i><span> Top </span></div>
+        <div id="snackbar">Some text some message..</div>
         <div class="col-md-7 col-sm-12 col-xs-12">
           <div class="module clearfix modLine footer--social">
             <h3 class="modtitle">Follow Us</h3>
